Add a polygon/com publisher to seq controller

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -78,6 +78,7 @@ mc_control/mc_posture_controller.cpp
 mc_control/mc_body6d_controller.cpp
 mc_control/mc_bci_self_interact_controller.cpp
 mc_control/mc_com_controller.cpp
+mc_control/MCSeqPublisher.cpp
 mc_control/mc_seq_controller.cpp
 mc_control/mc_seq_steps.cpp
 mc_control/mc_mrqp_controller.cpp
