--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 variables:
   CI_TOOL: gitlab-ci
   APT_DEPENDENCIES: "openjdk-6-jdk openjdk-6-jre jython libreadline-java java-common ttf-kochi-gothic ttf-kochi-mincho gcc g++ make build-essential cmake cmake-qt-gui cmake-curses-gui doxygen graphviz pkg-config python-yaml libcos4-dev libomnievents-dev libomniorb4-1 libomniorb4-dev libomnithread3-dev libomnithread3c2 omnievents omniidl omniidl-python omniorb omniorb-idl omniorb-nameserver python-omniorb python-tk liblapack3gf liblapack-dev libatlas-base-dev libatlas-dev libblas3gf libblas-dev f2c libf2c2 libf2c2-dev libgfortran3 libgfortran3-dbg zlib1g-dev libpng12-dev uuid-dev openrtm-aist-dev libeigen3-dev collada-dom-dev libsdl2-dev libglew-dev freeglut3-dev libopencv-dev libtinyxml2-dev libboost-all-dev libjsoncpp-dev libgeos++-dev libgeos-dev openrtm-aist-python libsdl1.2-dev qhull-bin libqhull-dev libpcl-all libqt4-dev libqt4-opengl-dev libxmu-dev"
-  GIT_DEPENDENCIES: "jorisv/SpaceVecAlg jorisv/RBDyn jorisv/eigen-qld git@gite.lirmm.fr:multi-contact/eigen-lssol.git jrl-umi3218/sch-core jorisv/Tasks git@gite.lirmm.fr:multi-contact/mc_rbdyn_urdf_cpp.git fkanehiro/openhrp3 OctoMap/octomap fkanehiro/hrpsys-base"
+  GIT_DEPENDENCIES: "jorisv/SpaceVecAlg jorisv/RBDyn jorisv/eigen-qld git@gite.lirmm.fr:multi-contact/eigen-lssol.git jrl-umi3218/sch-core gergondet/Tasks git@gite.lirmm.fr:multi-contact/mc_rbdyn_urdf_cpp.git fkanehiro/openhrp3 OctoMap/octomap fkanehiro/hrpsys-base"
   MASTER_PPA: "v-launchpad-jochen-sprickerhof-de/pcl"
 
 # Secured variable are stored in the project
