--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -2,6 +2,7 @@
   //"Enabled" : ["Posture", "Body6d", "CoM", "Seq", "Driving", "Egress", "EgressMRQP", "BCISelfInteract"],
   "Enabled"   : ["Seq"],
   //"Default"   : "Body6d",
+  "Timestep" : 0.005,
   "Seq" : {
     //"Env" : {
     //  "Path" : "/home/gergondet/devel-src/catkin_ws/mc_ws/src/hrp2_drc/hrp2_drc_description",
