[Win32] Fix build and installation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,19 @@ if(GEOS_CONFIG)
   include_directories(${GEOS_INCLUDE_DIR})
   link_directories(${GEOS_LIBRARY_DIR})
 else()
-  MESSAGE(SEND_ERROR "Could not find geos-config, missing dependency")
+  if(WIN32)
+    if(NOT DEFINED GEOS_PREFIX)
+      MESSAGE(WARNING "GEOS_PREFIX not defined, assuming it is equal to CMAKE_INSTALL_PREFIX")
+      set(GEOS_PREFIX ${CMAKE_INSTALL_PREFIX})
+    endif()
+    set(GEOS_INCLUDE_DIR ${GEOS_PREFIX}/include)
+    set(GEOS_LIBRARY_DIR ${GEOS_PREFIX}/lib)
+    set(GEOS_LIBRARY geos)
+    include_directories(${GEOS_INCLUDE_DIR})
+    link_directories(${GEOS_LIBRARY_DIR})
+  else()
+    MESSAGE(SEND_ERROR "Could not find geos-config, missing dependency")
+  endif()
 endif()
 
 if(NOT DEFINED MC_ENV_DESCRIPTION_PATH)
@@ -72,7 +84,7 @@ if(NOT DEFINED MC_ENV_DESCRIPTION_PATH)
   endif()
 endif()
 
-if(NOT DEFINED HRP2_DESCRIPTION_PATH)
+if(NOT DEFINED HRP2_DRC_DESCRIPTION_PATH)
   execute_process(COMMAND rospack find hrp2_drc_description
                   RESULT_VARIABLE HRP2_DRC_DESCRIPTION_FOUND
                   OUTPUT_VARIABLE HRP2_DRC_DESCRIPTION_PATH
