--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,6 +128,7 @@ endif()
 add_optional_dependency(roscpp)
 if(${ROSCPP_FOUND})
   set(DEFINE_HAS_ROS_MACRO "#define MC_RTC_HAS_ROS 1")
+  add_required_dependency(nav_msgs)
   add_required_dependency(sensor_msgs)
   add_required_dependency(tf2_ros)
 else()
