[ci] Build more variants
All combinations of with/without ROS and with/without hrpsys-base

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,9 @@
 variables:
   CI_TOOL: gitlab-ci
-  APT_DEPENDENCIES: "openjdk-6-jdk openjdk-6-jre jython libreadline-java java-common ttf-kochi-gothic ttf-kochi-mincho gcc g++ make build-essential cmake cmake-qt-gui cmake-curses-gui doxygen graphviz pkg-config python-yaml libcos4-dev libomnievents-dev libomniorb4-1 libomniorb4-dev libomnithread3-dev libomnithread3c2 omnievents omniidl omniidl-python omniorb omniorb-idl omniorb-nameserver python-omniorb python-tk liblapack3gf liblapack-dev libatlas-base-dev libatlas-dev libblas3gf libblas-dev f2c libf2c2 libf2c2-dev libgfortran3 libgfortran3-dbg zlib1g-dev libpng12-dev uuid-dev openrtm-aist-dev libeigen3-dev collada-dom-dev libsdl2-dev libglew-dev freeglut3-dev libopencv-dev libtinyxml2-dev libboost-all-dev libjsoncpp-dev libgeos++-dev libgeos-dev openrtm-aist-python libsdl1.2-dev qhull-bin libqhull-dev libpcl-all libqt4-dev libqt4-opengl-dev libxmu-dev"
-  GIT_DEPENDENCIES: "jorisv/SpaceVecAlg jorisv/RBDyn jorisv/eigen-qld git@gite.lirmm.fr:multi-contact/eigen-lssol.git jrl-umi3218/sch-core gergondet/Tasks git@gite.lirmm.fr:multi-contact/mc_rbdyn_urdf_cpp.git fkanehiro/openhrp3 OctoMap/octomap fkanehiro/hrpsys-base"
+  APT_DEPENDENCIES: "openjdk-6-jdk openjdk-6-jre jython libreadline-java java-common ttf-kochi-gothic ttf-kochi-mincho gcc g++ make build-essential cmake cmake-qt-gui cmake-curses-gui doxygen graphviz pkg-config python-yaml libcos4-dev libomnievents-dev libomniorb4-1 libomniorb4-dev libomnithread3-dev libomnithread3c2 omnievents omniidl omniidl-python omniorb omniorb-idl omniorb-nameserver python-omniorb python-tk liblapack3gf liblapack-dev libatlas-base-dev libatlas-dev libblas3gf libblas-dev f2c libf2c2 libf2c2-dev libgfortran3 libgfortran3-dbg zlib1g-dev libpng12-dev uuid-dev collada-dom-dev libsdl2-dev libglew-dev freeglut3-dev libopencv-dev libtinyxml2-dev libboost-all-dev libjsoncpp-dev libgeos++-dev libgeos-dev libsdl1.2-dev qhull-bin libqhull-dev libpcl-all libqt4-dev libqt4-opengl-dev libxmu-dev"
+  GIT_DEPENDENCIES: "jorisv/SpaceVecAlg jorisv/RBDyn jorisv/eigen-qld git@gite.lirmm.fr:multi-contact/eigen-lssol.git jrl-umi3218/sch-core gergondet/Tasks git@gite.lirmm.fr:multi-contact/mc_rbdyn_urdf_cpp.git"
   MASTER_PPA: "v-launchpad-jochen-sprickerhof-de/pcl"
+  ROS_DISTRO: "indigo"
 
 # Secured variable are stored in the project
 # See: http://doc.gitlab.com/ci/variables/README.html
@@ -22,9 +23,44 @@ before_script:
   - ./.jrl-ci/dependencies/eigen-3.2
   - ./.jrl-ci/run before_install
 
-build_gcc:
+build_gcc_noros_nohrpsys:
   stage: build
   script:
+    - export CC=gcc
+    - export CXX=g++
+    - ./.jrl-ci/run build
+    - ./.jrl-ci/run after_success
+  tags:
+    - GCC
+
+build_gcc_noros_hrpsys:
+  stage: build
+  script:
+    - export APT_DEPENDENCIES="openrtm-aist-dev openrtm-aist-python"; export GIT_DEPENDENCIES="fkanehiro/openhrp3 OctoMap/octomap fkanehiro/hrpsys-base"; ./.jrl-ci/run before_install
+    - export CC=gcc
+    - export CXX=g++
+    - ./.jrl-ci/run build
+    - ./.jrl-ci/run after_success
+  tags:
+    - GCC
+
+build_gcc_ros_nohrpsys:
+  stage: build
+  script:
+    - ./.jrl-ci/dependencies/catkin
+    - export APT_DEPENDENCIES="sensor_msgs tf2_ros"; ./.jrl-ci/run before_install
+    - export CC=gcc
+    - export CXX=g++
+    - ./.jrl-ci/run build
+    - ./.jrl-ci/run after_success
+  tags:
+    - GCC
+
+build_gcc_ros_hrpsys:
+  stage: build
+  script:
+    - ./.jrl-ci/dependencies/catkin
+    - export APT_DEPENDENCIES="sensor_msgs tf2_ros openrtm-aist-dev openrtm-aist-python"; export GIT_DEPENDENCIES="fkanehiro/openhrp3 OctoMap/octomap fkanehiro/hrpsys-base"; ./.jrl-ci/run before_install
     - export CC=gcc
     - export CXX=g++
     - ./.jrl-ci/run build
