--- a/include/mc_rtc/config.h.cmake.in
+++ b/include/mc_rtc/config.h.cmake.in
@@ -14,6 +14,7 @@ constexpr auto HRP2_DRC_DESCRIPTION_PATH = "${HRP2_DRC_DESCRIPTION_PATH}";
 constexpr auto HRP4_DESCRIPTION_PATH = "${HRP4_DESCRIPTION_PATH}";
 constexpr auto INSTALL_PREFIX = "${CMAKE_INSTALL_PREFIX}/";
 constexpr auto MC_ROBOTS_INSTALL_PREFIX = "${MC_ROBOTS_INSTALL_PREFIX}/";
+constexpr auto MC_CONTROLLER_INSTALL_PREFIX = "${MC_CONTROLLER_INSTALL_PREFIX}/";
 constexpr auto DATA_PATH = "${CMAKE_INSTALL_PREFIX}/share/mc_rtc/";
 constexpr auto CONF_PATH = "${CMAKE_INSTALL_PREFIX}/etc/mc_rtc.conf";
 
