--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(mc_rtc_loader SHARED mc_rtc/loader.cpp ../include/mc_rtc/loader.h ../include/mc_rtc/loader_api.h)
 set_target_properties(mc_rtc_loader PROPERTIES COMPILE_FLAGS "-DMC_RTC_LOADER_EXPORTS")
 target_link_libraries(mc_rtc_loader ${Boost_LIBRARIES} ltdl)
+pkg_config_append_libs(mc_rtc_loader)
 
 set(mc_rbdyn_SRC
 mc_rbdyn/SCHAddon.cpp
