--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -154,6 +154,7 @@ mc_control/ForceContactSensor.cpp
 mc_control/SimulationContactSensor.cpp
 mc_control/generic_gripper.cpp
 mc_control/mc_controller.cpp
+mc_control/mc_python_controller.cpp
 mc_control/mc_global_controller.cpp
 mc_control/mc_global_controller_services.cpp
 )
@@ -163,6 +164,7 @@ set(mc_control_HDR
 ../include/mc_control/ForceContactSensor.h
 ../include/mc_control/generic_gripper.h
 ../include/mc_control/mc_controller.h
+../include/mc_control/mc_python_controller.h
 ../include/mc_control/msg/Contact.h
 ../include/mc_control/msg/QPResult.h
 ../include/mc_control/msg/Robot.h
